--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+body{
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
-}
-body{
     margin: auto;
+    padding: 0;
     background-color: #8080801e;
 }
+.cursor{
+    cursor: pointer;
+}
+/* Hide the default checkbox */
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; /* Make it a circle */
+    border: 2px solid #111681; /* Blue border color */
+    outline: none;
+    cursor: pointer;
+  }
+  
+  /* Custom style when checkbox is checked */
+  input[type="checkbox"]:checked {
+    background-color: #111681; /* Blue background color */
+    box-shadow: inset 0 0 0 2px #fff; /* Add space inside the circle when checked */
+  }
+  
+  
