--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,5 +29,7 @@ input[type="checkbox"] {
     background-color: #111681; /* Blue background color */
     box-shadow: inset 0 0 0 2px #fff; /* Add space inside the circle when checked */
   }
-  
+  Link{
+    
+  }
   
