--- a/frontend/src/pages/checkout/checkout.css
+++ b/frontend/src/pages/checkout/checkout.css
@@ -206,7 +206,7 @@
   .icon {
     font-size: 20px;
     margin-right: 10px;
-    color: #f57c00;
+    color: #111681;
   }
   .message{
     font-size: 18px;
