--- a/frontend/src/pages/account/sign/log.css
+++ b/frontend/src/pages/account/sign/log.css
@@ -1,102 +1,82 @@
-/* login.css */
-.login-page {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .form-div {
-    background-color: #f4f4f4;
-    padding: 30px;
-    border-radius: 5px;
-    width: 400px;
-    margin: 20px 0px;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  .form-div h1 {
-    font-size: 30px;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 25px;
-  }
-  
-  .form-grid {
-    display: grid;
-    gap: 5px;
-  }
-  
-  .input-dev {
-    margin-bottom: 0px;
-    display: grid;
-    gap: 10px;
-  }
-  
-  .input-dev label {
-    font-size: 17px;
-    font-weight: 550;
-    color: #000000be;
-  }
-  
-  hr {
-    border: none;
-    border-top: 2px solid #080a3db4;
-    margin: 20px 0;
-  }
-  
-  button {
-    background-color: #111681;
-    width: 80%;
-    height: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 15px;
-  }
-  
-  button.signbtn {
-    color: #fff;
-    font-size: 19px;
-    font-weight: 550;
-  }
-  
-  .input-dev input[type="text"],
-  .input-dev input[type="email"],
-  .input-dev input[type="password"] {
-    width: 100%;
-    padding: 12px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  .error {
-    color: red;
-  }
-  
-  .error.danger {
-    color: red;
-  }
-  
-  .form-div:last-child {
-    margin-bottom: 0;
-  }
-  
-  .form-div a {
-    text-decoration: none;
-    color: #111681;
-  }
-  
-  .form-div a:hover {
-    text-decoration: underline;
-  }
-  
-  .icon {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 5px;
-  }
-  
+.loginpage_flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.formDiv {
+  background-color: #f4f4f4;
+  padding: 30px;
+  border-radius: 5px;
+  width: 400px;
+  margin: 20px 0px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+.containers h2{
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.formGrid {
+  display: grid;
+  gap: 10px;
+}
+
+.inputDev {
+  margin-bottom: 0px;
+  display: grid;
+  gap: 10px;
+}
+
+.inputDev label {
+  font-size: 17px;
+  font-weight: 550;
+  color: #000000be;
+}
+input {
+  width: 100%;
+  padding: 12px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button {
+  background-color: #111681;
+  width: 80%;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 15px;
+  color: #fff;
+  font-size: 19px;
+  font-weight: 550;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.error {
+  color: #dc3545;
+}
+
+.danger {
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  color: #721c24;
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 10px;
+}
