--- a/frontend/src/pages/details/productdetail.css
+++ b/frontend/src/pages/details/productdetail.css
@@ -13,32 +13,40 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  width: 100%;
+
 }
+
 .pics {
-  width: 50%; /* Set the width to 50% */
-  display: flex;
-  display: block;
+  width: 50%;
   padding: 10px;
+  margin-left: 0px;
+  margin-right: 45px;
 }
+
 /* Styles for the container of enlarged product image */
 .enlarged-image {
   margin-bottom: 20px;
   height: 100%;
   width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .enlarged-image img {
-  width: 100%; /* Updated to fill its container */
-  max-width: 500px;
+  width: 600px;
+  max-width: 400px;
   height: auto;
   border: 2px solid #0513b1;
   border-radius: 5px;
+  margin: 20px;
 }
 
 /* Styles for the container of product photos */
 .product-photos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 20fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Changed 20fr to 1fr */
   grid-gap: 10px;
 }
 
@@ -59,7 +67,7 @@
 
 /* Styles for the container of product details */
 .product-details {
-  width: 50%; /* Set the width to 50% */
+  width: 50%;
   padding: 20px;
   border-radius: 5px;
   margin-top: 20px;
@@ -80,12 +88,14 @@
   margin-bottom: 0;
   margin-top: 0;
 }
-.product-details h2{
+
+.product-details h2 {
   font-size: 15px;
   font-weight: 550;
   color: #000000c4;
   margin-left: 5px;
 }
+
 /* Styles for product details like price, description, categories */
 .product-details p {
   font-size: 17px;
@@ -124,17 +134,19 @@
   margin-top: 5px;
 }
 
-  /* Styles for related products section */
-  .related-products {
-    width: 70%;
-    margin-top: 20px;
-  }
-  .related-products h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-  .productrow {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+/* Styles for related products section */
+.related-products {
+  width: 70%;
+  margin-top: 20px;
+}
+
+.related-products h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.productrow {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
