--- a/frontend/src/pages/prebuild/prebuild.css
+++ b/frontend/src/pages/prebuild/prebuild.css
@@ -12,14 +12,13 @@
     position: relative;
     top: 0;
     left: 0;
-    z-index: 1;
   }
   .product-list {
     max-width: 80%;
     margin: auto;
-    background-color: #0a0a0a;
-    border-right: .5px solid #ffffffa4;
-    border-left: .5px solid #ffffffa4;
+    background-color: #25252531;
+    border-right: .5px solid #ffffff3b;
+    border-left: .5px solid #ffffff33;
     text-align: center;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -28,7 +27,10 @@
   }
   
   .prebuild-image {
+    width: 100%;
+    height: 350px;
     max-width: 100%;
     background-color: #0a0a0a;
+    margin-bottom: 0;
   }
   
